--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         elements are delineated by tags, written using angle brackets.
       </p>
     </ol>
+    <input type="checkbox" />
   </body>
 </html>
