--- a/index.html
+++ b/index.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <title>WEB1-web</title>
+    <title>Something</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="index.css" />
   </head>
-
   <body>
-    <ol>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
+    <div class="js-clock">
+      <h1>00:00</h1>
+    </div>
 
-      <ol>
-        <li>RichDad</li>
-        <li>부자</li>
-        <li>돈벌자</li>
-      </ol>
+    <form class="js-form form">
+      <input type="text" placeholder="What is your name?" />
+    </form>
 
-      <h1>HTML이란 무엇인가</h1>
-      <p>
-        <a href="https://www.w3.org/TR/html5/">
-          Hypertext Markup Language (HTML)
-        </a>
-        is the standard markup language for
-        <strong>creating <u>web</u> pages</strong> and web applications.Web
-        browsers receive HTML documents from a web server or from local storage
-        and render them into multimedia web pages. HTML describes the structure
-        of a web page semantically and originally included cues for the
-        appearance of the document.
-        <img src="coding.jpg" width="50%" />
-      </p>
-      <p style="margin-top:45px;">
-        HTML elements are the building blocks of HTML pages. With HTML
-        constructs, images and other objects, such as interactive forms, may be
-        embedded into the rendered page. It provides a means to create
-        structured documents by denoting structural semantics for text such as
-        headings, paragraphs, lists, links, quotes and other items. HTML
-        elements are delineated by tags, written using angle brackets.
-      </p>
-    </ol>
-    <input type="checkbox" />
+    <h4 class="js-greetings greetings"></h4>
+
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
+
+    <span class="js-weather"></span>
+    <script src="colck.js"></script>
+    <script src="greeting.js"></script>
+    <script src="todo.js"></script>
+    <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
